# habitantes-grenoble-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  fix_tests.py  pyproject.toml  smoke_test.py
.claude/: CLAUDE.md  SUGGESTIONS.md
.claude/agents/: design.agent.md  eval-engineer.agent.md  tech-architect.agent.md  tech-lead.agent.md
.claude/checkpoints/: T2-CHECKPOINT.md
.claude/skills/: SKILL.md
.github/workflows/: ci.yml
.specs/: release-checklist.md
.specs/control-center/: design.md  spec.md  tasks.md
.specs/improvements/: README.md
.specs/kb-management/: design.md  spec.md  tasks.md
.specs/project/: PROJECT.md  ROADMAP.md  STATE.md
api/: Dockerfile
api/logs/: interactions.jsonl
app/: Dockerfile  requirements.txt  telegram_bot.py
app/admin/: index.html
app/whatsapp_bot/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
config/: base.yaml
docs/: ARCHITECTURE.md  BASE_LEGAL.md  IDEATION.md  OVERVIEW.md  PRIVACIDADE.md
docs/templates/: spec-v2.template.md
ingestion/: 0-wpp_parse_and_classify.py  1-build_qa_pairs.py  2-generate_synthesis_from_qa.py  3-build_qdrant_collection.py  config.py  erase.py  load_only.py  pipeline.py
ingestion/extract/: whatsapp.py
ingestion/load/: qdrant.py
ingestion/preprocess/: qa_pairs.py  synthesis.py
ingestion/prompts/: synthesis_prompt.txt
tests/: conftest.py  retrieval_smoke_test.py
tests/eval/: CHECKPOINT.md  EVAL_GUIDE.md  IMPROVEMENTS_REPORT.md  README_v2.md  golden_dataset.json  golden_dataset_v2.json  golden_v2_review.md  (+3 more)
(+134 files in other folders)
